[package]
name = "rustls-symcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { git = "https://github.com/rustls/rustls.git" }
rust-symcrypt = {version = "0.1", path = "D:\\rust\\pfx_leak\\rust-symcrypt-sys\\rust-symcrypt"}
hex = "0.4.3"
