[package]
name = "rustls-symcrypt-examples"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "rustls-symcrypt example code"
publish = false

[dependencies]
rustls-symcrypt = {path = "../rustls-symcrypt"}
rustls = {path ="../../rustls/rustls", features = ["ring", "logging", "tls12"]}
webpki-roots = "0.26"
webpki = {package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false}
rcgen = { version = "0.12", features = ["ring"] }
log = "0.4.20"
env_logger = "0.10" # 0.11 requires 1.71 MSRV even as a dev-dep (due to manifest features)
rustls-pemfile = "2.1.0"
cmake = "0.1"
structopt = { version = "0.3", default-features = false }


[[bin]]
name = "sample_client"
path = "bin/sample_client.rs"

[[bin]]
name = "sample_server"
path = "bin/sample_server.rs"

[features]
rust-symcrypt = []
ring = []
localhost = []
internet = []

#default-features = []

default = [ 
    #"rust-symcrypt",
    "ring",
    #"localhost",
    "internet",
    ]
